c4prj2_input/grade.txt
Grading at Sat Aug  3 03:32:01 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:25:36: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
          } else if ( '2' <= str[i] && str[i] <= '9' || 
                                    ^
input.c:26:80: error: lvalue required as left operand of assignment
         str[i] = '0' || str[i] = 'A' || str[i] = 'K' || str[i] = 'Q' || str[i] = 'J') {
                                                                                ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
